--- a/.github/workflows/master_movie-recommendation-system.yml
+++ b/.github/workflows/master_movie-recommendation-system.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - name: Set up Python version
+      - name: Set up Python 3.9
         uses: actions/setup-python@v1
         with:
           python-version: '3.9'
